--- a/src/css/index.css
+++ b/src/css/index.css
@@ -175,6 +175,55 @@ body {
   .SkillGrid .hide {
     display: none;
   }
+  .WorkExperience {
+    height: 100vh;
+  }
+  .WorkExperience .title {
+    display: block;
+    border-top: 0.5px solid rgb(60, 24, 156);
+    margin-top: 2rem;
+  }
+  .WorkExperience .ShowMore {
+    display: block;
+    text-align: right;
+    margin-top: 2rem;
+    padding-right: 3rem;
+    text-decoration: underline;
+  }
+  .WorkExperience .WorkGrid {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 3vh;
+    justify-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline {
+    display: grid;
+    grid-template-rows: auto;
+    background-color: #00B4D8;
+    box-shadow: 10px 5px 5px #0077b6;
+    border-radius: 5%;
+    width: 80vw;
+    place-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline h2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+  }
+  .WorkExperience .WorkGrid .Outline .image {
+    max-width: 70%;
+    max-height: 80%;
+  }
+  .WorkExperience .WorkGrid .Outline p {
+    margin: 0;
+    padding: 0 1rem 1rem 1rem;
+    place-self: start;
+  }
+  .WorkExperience .WorkGrid .Outline .PC {
+    display: none;
+  }
+  .WorkExperience .WorkGrid .hide {
+    display: none;
+  }
 }
 @media only screen and (min-width: 426px) and (max-width: 768px) {
   h1 {
@@ -362,6 +411,56 @@ body {
   .SkillGrid .hide {
     display: none;
   }
+  .WorkExperience {
+    height: 100vh;
+  }
+  .WorkExperience .title {
+    display: block;
+    border-top: 0.5px solid rgb(60, 24, 156);
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .WorkExperience .ShowMore {
+    display: block;
+    text-align: right;
+    margin-top: 2rem;
+    padding-right: 3rem;
+    text-decoration: underline;
+  }
+  .WorkExperience .WorkGrid {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 3vh;
+    justify-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline {
+    display: grid;
+    grid-template-rows: auto;
+    background-color: #00B4D8;
+    box-shadow: 10px 5px 5px #0077b6;
+    border-radius: 5%;
+    width: 80vw;
+    place-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline h2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+  }
+  .WorkExperience .WorkGrid .Outline .image {
+    max-width: 70%;
+    max-height: 80%;
+  }
+  .WorkExperience .WorkGrid .Outline p {
+    margin: 0;
+    padding: 0 2rem 1rem 2rem;
+    place-self: start;
+  }
+  .WorkExperience .WorkGrid .Outline .PC {
+    display: none;
+  }
+  .WorkExperience .WorkGrid .hide {
+    display: none;
+  }
 }
 @media only screen and (min-width: 769px) {
   h1 {
@@ -539,6 +638,54 @@ body {
     padding: 1rem 1rem;
     font-size: 20px;
     place-self: start;
+  }
+  .WorkExperience {
+    min-height: 100vh;
+  }
+  .WorkExperience .title {
+    display: block;
+    border-top: 0.5px solid rgb(60, 24, 156);
+    margin-top: 3rem;
+    padding-left: 3rem;
+  }
+  .WorkExperience .ShowMore {
+    display: block;
+    text-align: right;
+    margin-top: 3rem;
+    padding-right: 3rem;
+    text-decoration: underline;
+  }
+  .WorkExperience .WorkGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 70vh;
+    justify-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline {
+    display: grid;
+    grid-template-rows: 0.5fr 3fr 7fr;
+    background-color: #00B4D8;
+    box-shadow: 10px 5px 5px #0077b6;
+    border-radius: 5%;
+    width: 35vw;
+    min-height: 60vh;
+    margin-top: 2rem;
+    place-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline h2 {
+    margin: 0.5rem;
+  }
+  .WorkExperience .WorkGrid .Outline .image {
+    width: 90%;
+  }
+  .WorkExperience .WorkGrid .Outline p {
+    margin: 0;
+    padding: 1rem 2rem;
+    font-size: 20px;
+    place-self: start;
+  }
+  .WorkExperience .WorkGrid .Outline .Phone {
+    display: none;
   }
 }
 
