--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,15 +12,21 @@ body {
     font-size: 32px;
     text-align: center;
   }
-  .Header {
-    display: flex;
-    flex-direction: column;
-  }
-  .Header h2 {
+  .TopLink {
     display: flex;
     justify-content: center;
     width: 100%;
     border-bottom: solid 1px rgb(60, 24, 156);
+    background-image: linear-gradient(to right top, #48cae4, #59cee6, #67d3e8, #75d7ea, #81dbec, #8cdeee, #96e1ef, #a0e4f1, #abe7f3, #b6eaf5, #c0edf6, #caf0f8);
+    position: sticky;
+    top: 0;
+  }
+  #PC {
+    display: none;
+  }
+  .Header {
+    display: flex;
+    flex-direction: column;
   }
   .Header nav {
     display: flex;
@@ -226,6 +232,9 @@ body {
   }
 }
 @media only screen and (min-width: 426px) and (max-width: 768px) {
+  #Phone {
+    display: none;
+  }
   h1 {
     font-family: Courgette;
     font-size: 48px;
@@ -235,7 +244,10 @@ body {
     margin-top: 1rem;
   }
   .Header {
-    padding: 0 2rem;
+    position: sticky;
+    top: 0;
+    background-image: linear-gradient(to right top, #48cae4, #59cee6, #67d3e8, #75d7ea, #81dbec, #8cdeee, #96e1ef, #a0e4f1, #abe7f3, #b6eaf5, #c0edf6, #caf0f8);
+    padding: 0 1.5rem;
   }
   .Header h2 {
     margin-top: 0;
@@ -249,7 +261,7 @@ body {
   .Header nav p {
     display: inline-block;
     text-decoration: underline;
-    margin-right: 1rem;
+    margin-right: 0.1rem;
     margin-left: 0.5rem;
   }
   .Header nav p:hover {
@@ -463,6 +475,9 @@ body {
   }
 }
 @media only screen and (min-width: 769px) {
+  #Phone {
+    display: none;
+  }
   h1 {
     font-family: Courgette;
     font-size: 52px;
@@ -470,6 +485,9 @@ body {
     margin-right: 2rem;
   }
   .Header {
+    position: sticky;
+    top: 0;
+    background-image: linear-gradient(to right top, #48cae4, #59cee6, #67d3e8, #75d7ea, #81dbec, #8cdeee, #96e1ef, #a0e4f1, #abe7f3, #b6eaf5, #c0edf6, #caf0f8);
     display: grid;
     grid-template-columns: 2fr 3fr;
     align-items: center;
