--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,6 +8,10 @@
   padding-right: $value;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body{
   padding: 0;
   margin: 0;
@@ -161,36 +165,36 @@ h1 {
       padding-right: 3rem;
       text-decoration: underline;
     }
-  }
-  .SkillGrid{
-    display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 3vh;
-    justify-items: center;
-    .Outline{
+    .SkillGrid{
       display: grid;
-      grid-template-rows: auto;
-      background-color: #00B4D8;
-      box-shadow: 10px 5px 5px #0077b6;
-      border-radius: 5%;
-      width: 80vw;
-      place-items: center;
-      h2{
-        margin-top: 0.5rem;
-        margin-bottom: 0;
+      grid-template-columns: 1fr;
+      row-gap: 3vh;
+      justify-items: center;
+      .Outline{
+        display: grid;
+        grid-template-rows: auto;
+        background-color: #00B4D8;
+        box-shadow: 10px 5px 5px #0077b6;
+        border-radius: 5%;
+        width: 80vw;
+        place-items: center;
+        h2{
+          margin-top: 0.5rem;
+          margin-bottom: 0;
+        }
+        .image{
+          max-width: 70%;
+          max-height: 80%;
+        }
+        p{
+          margin: 0;
+          padding: 0 1rem 1rem 1rem;
+          place-self: start;
+        }
       }
-      .image{
-        max-width: 70%;
-        max-height: 80%;
+      .hide{
+        display: none;
       }
-      p{
-        margin: 0;
-        padding: 0 1rem 1rem 1rem;
-        place-self: start;
-      }
-    }
-    .hide{
-      display: none;
     }
   }
   
@@ -240,6 +244,62 @@ h1 {
       }
       .hide{
         display: none;
+      }
+    }
+  }
+
+  .ContactMe{
+    height: 100vh;
+    .title{
+      display: block;
+      border-top: 0.5px solid rgb(60, 24, 156);
+      margin-top: 2rem;
+    }
+    .ContactGrid{
+      display: grid;
+      grid-template-columns: 80vw;
+      grid-template-rows: 35vh 45vh;
+      justify-content: center;
+      .AccountArea{
+        background-color: #00B4D8;
+        box-shadow: 10px 5px 5px #0077b6;
+        border-radius: 5%;
+        padding-top: 1rem;
+        padding-bottom: 1.5rem;
+        .Account{
+          position: relative;
+          display: flex;
+          justify-content: space-between;
+          @include MarginLR(1.5rem);
+          background-color: #90e0ef;
+          box-shadow: 5px 5px 5px #0077b6;
+          padding: 0.3rem;
+          margin-top: 1rem;
+          p{
+            margin: 0;
+            img{
+              position: absolute;
+              max-height: 70%;
+              width: auto;
+            }
+            .LinkLogo{
+              box-shadow: 1px 1px 1px #0077b6;
+            }
+          }
+        }
+      }
+
+      .SendMessage{
+        background-color: #00B4D8;
+        box-shadow: 10px 5px 5px #0077b6;
+        border-radius: 5%;
+        padding-top: 1rem;
+        padding-bottom: 1.5rem;
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
