--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -261,7 +261,7 @@ h1 {
       grid-template-rows: 35vh 45vh;
       justify-content: center;
       .AccountArea{
-        background-color: #00B4D8;
+        background-color: #48CAE4;
         box-shadow: 10px 5px 5px #0077b6;
         border-radius: 5%;
         padding-top: 1rem;
@@ -271,8 +271,8 @@ h1 {
           display: flex;
           justify-content: space-between;
           @include MarginLR(1.5rem);
-          background-color: #90e0ef;
-          box-shadow: 5px 5px 5px #0077b6;
+          background-color: #00B4D8; 
+          box-shadow: inset 5px 5px 5px #0077b6;
           padding: 0.3rem;
           margin-top: 1rem;
           p{
@@ -290,7 +290,7 @@ h1 {
       }
 
       .SendMessage{
-        background-color: #00B4D8;
+        background-color: #48CAE4; 
         box-shadow: 10px 5px 5px #0077b6;
         border-radius: 5%;
         padding-top: 1rem;
@@ -549,6 +549,68 @@ h1 {
       }
     }
   }
+
+  .ContactMe{
+    height: 100vh;
+    .title{
+      display: block;
+      border-top: 0.5px solid rgb(60, 24, 156);
+      margin-top: 2rem;
+    }
+    .ContactGrid{
+      display: grid;
+      grid-template-columns: 45vw 45vw;
+      grid-template-rows: 70vh;
+      column-gap: 1rem;
+      justify-content: center;
+      margin-top: 2rem;
+      @include MarginLR(1rem);  
+      padding: 2rem 0;
+      background-color: #00B4D8;
+      box-shadow: 10px 5px 5px #0077b6;
+      border-radius: 5%;
+      .AccountArea{
+        background-color: #48CAE4;
+        box-shadow: 5px 5px 5px #0077b6;
+        border-radius: 5%;
+        padding-top: 1rem;
+        padding-bottom: 1.5rem;
+        .Account{
+          position: relative;
+          display: flex;
+          justify-content: space-between;
+          @include MarginLR(1.5rem);
+          background-color: #00B4D8;
+          box-shadow: inset 5px 5px 5px #0077b6;
+          padding: 0.3rem;
+          margin-top: 1rem;
+          p{
+            margin: 0;
+            img{
+              position: absolute;
+              max-height: 70%;
+              width: auto;
+            }
+            .LinkLogo{
+              box-shadow: 1px 1px 1px #0077b6;
+            }
+          }
+        }
+      }
+
+      .SendMessage{
+        background-color: #48CAE4;
+        box-shadow: 5px 5px 5px #0077b6;
+        border-radius: 5%;
+        padding-top: 1rem;
+        padding-bottom: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 }
 
 @media only screen and (min-width:769px){
@@ -783,6 +845,69 @@ h1 {
         .Phone{
           display: none;
         }
+      }
+    }
+  }
+
+  .ContactMe{
+    height: 100vh;
+    .title{
+      display: block;
+      border-top: 0.5px solid rgb(60, 24, 156);
+      margin-top: 2rem;
+    }
+    .ContactGrid{
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      grid-template-rows: 70vh;
+      column-gap: 2rem;
+      justify-content: center;
+      margin-top: 2rem;
+      @include MarginLR(2rem);  
+      padding: 2rem 2rem;
+      background-color: #00B4D8;
+      box-shadow: 10px 5px 5px #0077b6;
+      border-radius: 5%;
+      max-width: 100%;
+      .AccountArea{
+        background-color: #48CAE4;
+        box-shadow: 5px 5px 5px #0077b6;
+        border-radius: 5%;
+        padding-top: 1rem;
+        padding-bottom: 1.5rem;
+        .Account{
+          position: relative;
+          display: flex;
+          justify-content: space-between;
+          @include MarginLR(1.5rem);
+          background-color: #00B4D8;
+          box-shadow: inset 5px 5px 5px #0077b6;
+          padding: 0.3rem;
+          margin-top: 1rem;
+          p{
+            margin: 0;
+            img{
+              position: absolute;
+              max-height: 70%;
+              width: auto;
+            }
+            .LinkLogo{
+              box-shadow: 1px 1px 1px #0077b6;
+            }
+          }
+        }
+      }
+
+      .SendMessage{
+        background-color: #48CAE4;
+        box-shadow: 5px 5px 5px #0077b6;
+        border-radius: 5%;
+        padding-top: 1rem;
+        padding-bottom: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
